Kafka Json Serialization and desirialization

--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -8,10 +8,21 @@ spring.kafka.consumer.group-id= myGroup
 spring.kafka.consumer.auto-offset-reset= earliest
 
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+
+#Now for json deserializer to upar wali value hata do kunki data apan json mein laenge and bhejenge
+spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
+
+#Here below means ki consumer sare packeges ko deserialize kr lega
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 
 #Producer Properties
 spring.kafka.producer.bootstrap-servers= localhost:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
+
+#For Producer to convert into json from java object and send to kafka topic
+spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
+
+#COnsumer de-serialize krega to read and producer serialize krega to send
