Externalize Kafka topics

--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -26,3 +26,10 @@ spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.Stri
 spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
 
 #COnsumer de-serialize krega to read and producer serialize krega to send
+
+
+
+#For externalize kafka topic names
+spring.kafka.topic.name=topicTest
+
+spring.kafka.topic.name.json=topicTest_json
